--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-auth-oauthlib = "^1.0.0"
 requests-oauthlib = "^1.3.1"
 beautifulsoup4 = "^4.11.2"
 pytz = "^2022.7.1"
+environs = "^9.5.0"
 
 
 [build-system]
