--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ google-auth-oauthlib = "^1.0.0"
 beautifulsoup4 = "^4.11.2"
 pytz = "^2022.7.1"
 environs = "^9.5.0"
+pre-commit = "^3.2.0"
 
 
 [build-system]
