--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: flake8
         args:
           - "--max-line-length=88"
-          - "--ignore=F401,E501,E203,W503"
+          - "--ignore=F401,E501,E203,W503,F405, F403"
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
